# specs-lara

./: .gitignore  README.md  clava.unit
2018-ANTAREX-Book/4.AutoPar/: CMakeLists.txt
2018-ANTAREX-Book/5.Exploration/: CMakeLists.txt
2018-PRACE/5.Exploration/solution/: CMakeLists.txt
2018-PRACE/7.HDF5/: CMakeLists.txt  Data.h  main.cpp
2018-PRACE/AutoPar/: AutoPar.lara  CMakeLists.txt
2018-PRACE/AutoPar/clava_matrix_mul/: clava_generated_files.txt  deploop#19[matrix_mult].t  deploop#19[matrix_mult]_output.t
2018-PRACE/AutoPar/clava_matrix_mul/CompilerIdC/: CMakeCCompilerId.c
2018-PRACE/AutoPar/clava_matrix_mul/src/: matrix_mul.c
2018-PRACE/Exploration/: CMakeLists.txt  Exploration.lara
ANTAREX/Aos2Soa/: CMakeLists.txt  README.md
ANTAREX/Aos2Soa/include/: aos2soa-config.h
ANTAREX/Aos2Soa/src-lvl0/: aos2soa.cpp  main.cpp
ANTAREX/Aos2Soa/src-lvl0-after/: aos2soa.cpp  aos2soa.h  main.cpp
ANTAREX/AutoPar/: CMakeLists.txt  README.md
ANTAREX/AutoPar/NAS/: CMakeLists.txt  CheckOpenMPPragmas.js  CheckOpenMPPragmas.lara  CopyOutput.lara  NAS-test.clava  NAS-test.lara  NasAutopar.lara  NasAutopar.mjs
ANTAREX/AutoPar/NAS-original/: CMakeLists.txt
ANTAREX/AutoPar/NAS-original/BT/: npbparams.h  work_lhs.h
ANTAREX/AutoPar/NAS-original/CG/: CMakeLists.txt  npbparams.h
ANTAREX/AutoPar/NAS-original/DC/: adc.h  dc_types.h  npbparams.h  protots.h  rbt.h
ANTAREX/AutoPar/NAS-original/EP/: CMakeLists.txt  npbparams.h
ANTAREX/AutoPar/NAS-original/FT/: CMakeLists.txt  npbparams.h
ANTAREX/AutoPar/NAS-original/IS/: is.c
ANTAREX/AutoPar/NAS-original/LU/: CMakeLists.txt  error.c  exact.c  l2norm.c  pintgr.c  rhs.c  setbv.c  setcoeff.c  setiv.c  ssor.c
ANTAREX/AutoPar/NAS-original/MG/: CMakeLists.txt  mg.c  npbparams.h
ANTAREX/AutoPar/NAS-original/SP/: CMakeLists.txt  npbparams.h
ANTAREX/AutoPar/NAS-original/UA/: CMakeLists.txt  header.h  npbparams.h  ua.c
ANTAREX/AutoPar/NAS-original/common/: CMakeLists.txt
ANTAREX/AutoPar/NAS/BT/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/CG/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/EP/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/FT/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/IS/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/LU/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/MG/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/SP/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/NAS/UA/: CMakeLists.txt  NAS_UA.c  expected_output.c
ANTAREX/AutoPar/NAS/test/: TestBT.args  TestBT.lara  TestCG.args  TestCG.lara  TestEP.args  TestEP.lara  TestFT.args  TestFT.lara  TestIS.args  TestIS.lara  TestLU.args  TestLU.lara  TestMG.args  TestMG.lara  TestSP.args  TestSP.lara  TestUA.args  TestUA.lara
ANTAREX/AutoPar/NAS/test-temp/: TestEP.lara  global.args
ANTAREX/AutoPar/Polybench/: CMakeLists.txt  CheckOpenMPPragmas.js  CheckOpenMPPragmas.lara  PolybenchAutopar.lara  PolybenchAutopar.mjs
ANTAREX/AutoPar/Polybench/2mm/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/3mm/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/adi/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/atax/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/bicg/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/cholesky/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/correlation/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/covariance/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/deriche/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/doitgen/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/durbin/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/gemm/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/gemver/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/gesummv/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/gramschmidt/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/heat-3d/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/jacobi-1d/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/jacobi-2d/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/lu/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/ludcmp/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/mvt/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/seidel-2d/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/Polybench/symm/: CMakeLists.txt  expected_output.c
ANTAREX/AutoPar/SimpleTest/: ApplyAutopar.lara  ApplyAutopar.mjs  CMakeLists.txt
ANTAREX/AutoPar/include/: lib.h
ANTAREX/AutoPar/src/: main.cpp
ANTAREX/AutoPar/src-NAS-W/: CMakeLists.txt
ANTAREX/AutoPar/src-NAS-singlesource/: CMakeLists.txt  CheckOpenMPPragmas.lara
ANTAREX/AutoPar/test/: AutoParBt.lara
ANTAREX/AutoPar/test-resources/: lara.resource
ANTAREX/Autotuner MatrixMultiplication/: CMakeLists.txt  MatrixMulMargot.clava  MatrixMulMargot.lara
ANTAREX/Autotuner MatrixMultiplication/scenario_1/: bootstrap.sh  build_scenario.sh
ANTAREX/Autotuner MatrixMultiplication/scenario_3/: CMakeCache.txt  cmake_install.cmake
ANTAREX/Autotuner MatrixMultiplication/src/: matrix_mul.c
ANTAREX/AutotunerMatrixMult/scenario_3/: CMakeLists.txt  Makefile  matrix_mul
ANTAREX/CMakeIntegration/synt/: .gitignore  CMakeLists.txt
ANTAREX/CMakeIntegration/weaving/: CMakeLists.txt  Test.lara  main.c
ANTAREX/Hdf5Types/: ApplyHdf5.lara  CMakeLists.txt  Hdf5Types.lara  hdf5.clava
ANTAREX/Hdf5Types/clava_generate_example/: ApplyHdf5.lara  CMakeLists.txt  Generate.lara
ANTAREX/Hdf5Types/clava_generate_example_2/: CMakeLists.txt  Generate.lara
ANTAREX/Hdf5Types/clava_generate_example_3/: CMakeLists.txt  Generate.clava  Generate.lara
ANTAREX/Hdf5Types/js/: HDF5.js
ANTAREX/OmpPragmasExplore/: CMakeLists.txt  ExplorePragmas.lara  ReenablePragmas.lara
ANTAREX/OmpPragmasExplore/src/: gemm.c  gemm.h
Examples/Gprofer/input/: CMakeLists.txt
(+1015 files in other folders)
