cmake_minimum_required(VERSION 3.5)
project(polybench)

add_subdirectory(utilities)
add_subdirectory(2mm)
add_subdirectory(3mm)
add_subdirectory(adi)
add_subdirectory(atax)
add_subdirectory(bicg)
add_subdirectory(cholesky)
add_subdirectory(correlation)
add_subdirectory(covariance)
add_subdirectory(deriche)
add_subdirectory(doitgen)
add_subdirectory(durbin)
add_subdirectory(gemm)
add_subdirectory(gemver)
add_subdirectory(gesummv)
add_subdirectory(gramschmidt)
add_subdirectory(heat-3d)
add_subdirectory(jacobi-1d)
add_subdirectory(jacobi-2d)
add_subdirectory(lu)
add_subdirectory(ludcmp)
add_subdirectory(mvt)
add_subdirectory(seidel-2d)
add_subdirectory(symm)
add_subdirectory(syr2k)
add_subdirectory(syrk)
add_subdirectory(trisolv)
add_subdirectory(trmm)
